[package]
name = "aegis-vault-utils"
authors = ["David Isaksson <davidisaksson93@gmail.com>"]
version = "0.5.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Utility for interacting and generating OTP codes from the Android app Aegis Authenticator's backup vault"
repository = "https://github.com/granddave/aegis-vault-utils/"
keywords = ["otp", "encryption", "2fa", "aegis"]
categories = ["authentication", "cryptography", "parsing"]

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
color-eyre = "0.6"
hex = "0.4.3"
libreauth = "0.16.0"
password-hash = "0.5.0"
scrypt = "0.11.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
